[fix] alignement des boutons avec le reste du menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,6 +174,7 @@ img{
 
 .page-nav-block{
     display: flex;
+    align-items: baseline;
 }
 
 .page-nav-block > .page-nav-item{
